test/tests/ExtendableMethodInNonExtendableClass.frost
class Test {
    @extendable
    method foo() {}
}